RESOLVED FIXED59419
Fix OwnPtr strict errors in DatasetDOMStringMap.h.
https://bugs.webkit.org/show_bug.cgi?id=59419
Summary Fix OwnPtr strict errors in DatasetDOMStringMap.h.
David Levin
Reported 2011-04-25 22:35:53 PDT
Fix OwnPtr strict errors in DatasetDOMStringMap.h.
Attachments
Patch (1.20 KB, patch)
2011-04-25 22:36 PDT, David Levin
abarth: review+
David Levin
Comment 1 2011-04-25 22:36:27 PDT
David Levin
Comment 2 2011-04-25 22:45:42 PDT
Note You need to log in before you can comment on or make changes to this bug.