Fix OwnPtr strict errors in DatasetDOMStringMap.h. https://bugs.webkit.org/show_bug.cgi?id=59419

Reviewed by Adam Barth.

* dom/DatasetDOMStringMap.h:
(WebCore::DatasetDOMStringMap::create):

Canonical link: https://commits.webkit.org/74602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84880 268f45cc-cd09-0410-ab3c-d52691b4dbfc